--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" th:fragment="parent(content,title)" xmlns:th="http://www.thymeleaf.org">
+<html class="dark" lang="en" th:fragment="parent(content,title)" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,32 +10,16 @@
         rel="stylesheet"
     />
 </head>
-<body>
+<body class="dark:bg-gray-900 dark:text-white">
     <!-- header content -->
-    <div id="header">
-        <ul class = "p-4">
-            <li>
-                <a data-th-href="@{'/home'}">
-                    Home
-                </a>
-            </li>
-            <li>
-                <a data-th-href="@{'/about'}">
-                    About
-                </a>
-            </li>
-            <li>
-                <a data-th-href="@{'/services'}">
-                    Services
-                </a>
-            </li>
-        </ul>
-    </div>
+    <div data-th-replace="~{navbar :: navbar}"></div>
     
     <!-- main content -->
-    <section data-th-replace="${content}">
-        <h1>Base Page reporting</h1>
-    </section>
+    <div class="p-4">
+        <section data-th-replace="${content}">
+            <h1>Base Page reporting</h1>
+        </section>
+    </div> 
     <!-- flow bite javascript -->
      <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
 </body>
