update : dark and light theme

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html class="dark" lang="en" th:fragment="parent(content,title)" xmlns:th="http://www.thymeleaf.org">
+<html class="light" lang="en" th:fragment="parent(content,title)" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-th-replace="${title}">Base Page</title>
     <link rel="stylesheet" data-th-href="@{'/css/output.css'}"/>
-    <link 
+    <link
         href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css"
         rel="stylesheet"
     />
@@ -22,5 +22,6 @@
     </div> 
     <!-- flow bite javascript -->
      <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+     <script data-th-src="@{'/js/theme.js'}"></script>
 </body>
 </html>
