--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,8 +4,64 @@
     <title>Sign Up</title>
 </head>
 <body>
-    <div id="content">
-        <h3>This is my sign up page</h3>
+    <div id="content" >
+        <div class="grid grid-cols-12 mt-3">
+            <div class="col-span-0 md:col-span-2 lg:col-span-3 xl:col-span-4"></div>   
+            <div class="col-span-12 md:col-span-8 lg:col-span-6 xl:col-span-4">
+                <!-- card begins -->
+                <div class="block p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+                        Sign Up
+                    </h5>
+
+                    <form class="max-w-sm mx-auto mt-5"> 
+                        <div class="mb-2">
+                            <label for="username" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                                Username
+                            </label>
+                            <input type="text" id="username" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                        </div>
+
+                        <div class="mb-2">
+                            <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                                Email
+                            </label>
+                            <input type="email" id="email" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@flowbite.com">
+                        </div>
+
+                        <div class="mb-2">
+                            <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                                New Password
+                            </label>
+                            <input type="password" id="password" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                        </div>
+
+                        <div class="mb-2">
+                            <label for="contact" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                                Contact Number
+                            </label>
+                            <input type="text" id="contact" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                        </div>
+
+                        <div class="mb-2">
+                            <label for="about" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                                Tell something about yourself
+                            </label>
+                            <textarea id="about" rows="4" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Write here..."></textarea>
+                        </div>
+
+                        <div class="mb-2 flex justify-center space-x-3 ">
+                            <button type="submit" class="px-3 py-2 rounded-lg bg-gray-700 hover:bg-gray-800 text-white dark:bg-blue-800 dark:hover:bg-blue-900">Register</button>
+                            <button type="reset" class="px-3 py-2 rounded-lg bg-red-500 hover:bg-red-600 text-white dark:bg-red-500 dark:hover:bg-orange-600">Reset</button>
+                        </div>
+
+                    </form>
+  
+                    
+                </div>
+        
+            </div>
+        </div>
     </div>
 </body>
 </html>
