update : user registered success message using session

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,6 +8,9 @@
         <div class="grid grid-cols-12 mt-3">
             <div class="col-span-0 md:col-span-2 lg:col-span-3 xl:col-span-4"></div>   
             <div class="col-span-12 md:col-span-8 lg:col-span-6 xl:col-span-4">
+                <!-- message  -->
+                 <div data-th-replace="message :: message"></div>
+
                 <!-- card begins -->
                 <div class="block p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
