update: validations added to sign up page

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -9,7 +9,7 @@
             <div class="col-span-0 md:col-span-2 lg:col-span-3 xl:col-span-4"></div>   
             <div class="col-span-12 md:col-span-8 lg:col-span-6 xl:col-span-4">
                 <!-- message  -->
-                 <div data-th-replace="message :: message"></div>
+                 <div data-th-replace="~{message :: message}"></div>
 
                 <!-- card begins -->
                 <div class="block p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
@@ -20,34 +20,64 @@
                     <form 
                     data-th-action="@{'/do-register'}"
                     method = "post"
-                    data-th-object="${userform}"
-                    class="max-w-sm mx-auto mt-5"> 
+                    data-th-object="${userForm}"
+                    class="max-w-sm mx-auto mt-5"
+                    novalidate> 
                         <div class="mb-2">
                             <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
-                                Username
+                                Name
                             </label>
-                            <input type="text" data-th-field="*{name}" id="name" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                            <input type="text" data-th-field="*{name}" id="name" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" />
+                            <p
+                            data-th-if="${#fields.hasErrors('name')}"
+                            data-th-errors="*{name}"
+                            class="text-red-800 px-1 py-2 dark:text-red-300"
+                            >
+                            Name is required
+                            </p>
                         </div>
 
                         <div class="mb-2">
                             <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
                                 Email
                             </label>
-                            <input type="email" data-th-field="*{email}" id="email" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@flowbite.com">
+                            <input type="email" data-th-field="*{email}" id="email" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@flowbite.com" />
+                            <p
+                            data-th-if="${#fields.hasErrors('email')}"
+                            data-th-errors="*{email}"
+                            class="text-red-800 px-1 py-2 dark:text-red-300"
+                            >
+                            Email is required
+                            </p>
+
                         </div>
 
                         <div class="mb-2">
                             <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
                                 New Password
                             </label>
-                            <input type="password" data-th-field="*{password}" id="password" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                            <input type="password" data-th-field="*{password}" id="password" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" />
+                            <p
+                            data-th-if="${#fields.hasErrors('password')}"
+                            data-th-errors="*{password}"
+                            class="text-red-800 px-1 py-2 dark:text-red-300"
+                            >
+                            Password is required
+                            </p>
                         </div>
 
                         <div class="mb-2">
                             <label for="contact" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
                                 Contact Number
                             </label>
-                            <input type="text" data-th-field="*{phoneNumber}" id="contact" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                            <input type="text" data-th-field="*{phoneNumber}" id="contact" aria-describedby="helper-text-explanation" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" />
+                            <p
+                            data-th-if="${#fields.hasErrors('phoneNumber')}"
+                            data-th-errors="*{phoneNumber}"
+                            class="text-red-800 px-1 py-2 dark:text-red-300"
+                            >
+                            Phone Number is required
+                            </p>
                         </div>
 
                         <div class="mb-2">
@@ -55,6 +85,13 @@
                                 Tell something about yourself
                             </label>
                             <textarea id="about" data-th-field="*{about}" rows="4" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Write here..."></textarea>
+                            <p
+                            data-th-if="${#fields.hasErrors('about')}"
+                            data-th-errors="*{about}"
+                            class="text-red-800 px-1 py-2 dark:text-red-300"
+                            >
+                            About is required
+                            </p>
                         </div>
 
                         <div class="mb-2 flex justify-center space-x-3 ">
